Implémentation des opérations CRUD sur passenger et flight
